# OS-Homework

./: .gitignore  CMakeLists.txt  README.md  a
practice-1/coroutine/: Makefile  README.md  a  coroutine.c  coroutine.h  coroutine_retry.c  main.c  utils.h
practice-1/practice 1-1/: Makefile  test.c
practice-1/practice 1-1/task1/: main.c  task1
practice-1/practice 1-1/task2/: main.c
practice-1/practice 1-1/task3/: main.c
practice-1/practice 1-1/task4/: main.c
practice-1/practice 1-1/task5/: main.c
practice-2/: README.md
practice-2/practice_2-1/: Makefile  buddy.c  code
practice-2/practice_2-2/: Makefile  clock.c  mm.c  mm_Explicit.c  mm_Implicit.c  mm_naive.c
practice-3/: README.md  file system lab.md
practice-3/libfuse/my_fuse/: fuse  my_fuse.c  rbtree.c  rbtree.h  script.sh
practice-3/task1/: The-Road-Not-Taken.txt  main.c
practice-3/task3/: Makefile  main.c  task3
practice-3/task5/: Makefile  main  main.c  test.txt
practice-3/task6/: main  main.cpp
practice-4/: README.md  guess  guess.i64  hack.py
